add users and blacklist component